          Ensured that ampersands and greater/less than symbols were properly 
            escaped so as not to be XML-toxic.
          Added geo:lat, geo:long and RSS link attributes to items in 
            category/locale listings to facilitate integration with mapping
            applications.
	Reorder navigation bar to provide more logical groupings.

0.47    15 January 2005
        Fixed bug with list_all_versions for nodes with only one version.
        Extended config changes to examples/reindex.pl (thanks jimbo).
        Now require CGI::Wiki 0.62 to fix bug with deleting versions.
        Try to ensure that a .htaccess file protecting wiki.conf is installed.
        Allow for external URLs for Text Formatting help.
        Home node recent changes box now flags new entries.
        Made default city and country be blank; specify them if you want them.
        Missing PREREQUISITE on Plucene added.
        Added CSS id "maincontent" to exclude the navbar and footer. Misc
        template tidying including removing old layout tables.

0.46	21 December 2004
        Minor bug fixes: remove bogus edit link on index listings,
          add missing default behaviour for geolocation
        Update supersearch help text URL.
        Add nofollow to robots meta tag.
        Added new CSS class "node_name" for inline non-hyperlink references
          to node names - see README.CSS for details.
        Fix bug with diff display on nodes containing macros.
        Fixed distance search paging bug.
        Fixed bug that allowed autocreation of locales and categories with
          trailing spaces in the name.
        Config management refactoring. This should not result in any
          user-visible changes, apart from introducing a new dependency on
          Class::Accessor.
        Make it clearer in documentation that overriding factory templates
          is a risky activity.
        Update feedback details and include URL of RT queue.